# Lapsa

./: .clang-format  .gitignore  CMakeLists.txt  linux-kernel-config
Applications/: CMakeLists.txt
Kodols/: CMakeLists.txt  Dmesg.cpp  Dmesg.h
Kodols/Arch/i386/: GDT.cpp  GDT.h  IDT.cpp  IDT.h  IO.h  ISRHandlers.cpp  Main.cpp  isr_wrapper.s
Kodols/Devices/: Serial.cpp  Serial.h
Kodols/KSerde/: KString.cpp  KString.h
Libraries/: CMakeLists.txt
Libraries/libc/: CMakeLists.txt  crt0.s  errno.h  stddef.h  stdlib.cpp  string.h
Libraries/libc/sys/: mman.h  stat.h  types.h
Libraries/serde/: ScopePtr.h  String.h
Libraries/serde/tests/: CMakeLists.txt  TestScopePtr.cpp
applications/čaula/: CMakeLists.txt  main.c
kodols/: CMakeLists.txt
kodols/arch/i386/: boot.s  gdt.cpp  gdt.h  main.cpp
kodols/devices/: serial.h
libraries/libc/: CMakeLists.txt  crt0.cpp  crt0.s  crti.s  crtn.s  fcntl.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.c  unistd.cpp  unistd.h
libraries/libc/sys/: types.h
meta/: build-toolchain.sh
meta/toolchain-patches/binutils/: Lapsa-target.patch
meta/toolchain-patches/gcc/: Lapsa-target.patch
